--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "",
   "version": "",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "http": "0.0.0"
   }
 }
