--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "",
   "version": "",
+  "scripts": {
+   "start": "node app.js"
+   },
   "dependencies": {
     "express": "^4.16.3",
     "http": "0.0.0"
