--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "node app.js"
   },
   "dependencies": {
+     "actions-on-google": "^2.3.0",
     "express": "^4.16.3",
     "http": "0.0.0",
     "jsforce": "^1.9.1"
